@@ -1,21 +1,41 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <name>camunda BPM - engine - Compatbility Test Spring 4</name>
+  <name>Camunda Platform - engine - Compatbility Test Spring 4</name>
   <artifactId>camunda-engine-spring-compatibility-test-spring4</artifactId>
 
   <parent>
     <groupId>org.camunda.bpm</groupId>
     <artifactId>camunda-database-settings</artifactId>
     <relativePath>../../database</relativePath>
-    <version>7.14.0-SNAPSHOT</version>
+    <version>7.17.0-SNAPSHOT</version>
   </parent>
-  
+
   <properties>
-    <version.spring.framework>4.3.23.RELEASE</version.spring.framework>
-    <version.hibernate>5.1.16.Final</version.hibernate> <!-- latest version for Java 7 -->
+    <version.spring.framework>4.3.30.RELEASE</version.spring.framework>
   </properties>
-  
+
+  <dependencyManagement>
+    <dependencies>
+
+      <dependency>
+        <groupId>org.camunda.bpm</groupId>
+        <artifactId>camunda-core-internal-dependencies</artifactId>
+        <version>${project.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-framework-bom</artifactId>
+        <version>${version.spring.framework}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <!-- engine Spring artifact and tests -->
     <dependency>
@@ -31,7 +51,7 @@
       <scope>test</scope>
     </dependency>
     
-    <!-- Spring 5 -->
+    <!-- Spring 4 -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
@@ -69,12 +89,6 @@
       <version>${version.hibernate}</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
-      <version>${version.hibernate}</version>
-      <scope>test</scope>
-    </dependency>
     
     <dependency>
       <groupId>junit</groupId>
@@ -94,12 +108,22 @@
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
-      <scope>provided</scope>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.python</groupId>
       <artifactId>jython</artifactId>
-      <scope>provided</scope>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.graalvm.js</groupId>
+      <artifactId>js</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.graalvm.js</groupId>
+      <artifactId>js-scriptengine</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -114,7 +138,6 @@
                 <dependency>org.camunda.bpm:camunda-engine-spring</dependency>
             </dependenciesToScan>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
-            <argLine>-XX:MaxPermSize=160m -Xmx768m</argLine>
         </configuration>
       </plugin>
     </plugins>
@@ -133,6 +156,28 @@
           <scope>test</scope>
         </dependency>
       </dependencies>
+    </profile>
+    <profile>
+      <id>java15</id>
+      <activation>
+        <jdk>[15,)</jdk>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <!-- Nashorn is not part of the JDK anymore in Java 15+ -->
+                <excludes>
+                  <exclude>**/*NashornTest.java</exclude>
+                </excludes>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
     </profile>
   </profiles> 
 </project>
